3821B1FI3/2_integral_oneapi/kulikov_artem/log.txt
/home/crazyproger/sandbox/oneapi-2025/3821B1FI3/2_integral_oneapi/kulikov_artem/integral_oneapi.cpp:10:22: error: expected ';' after expression
   10 |         buffer<float> sum_buf(&local_res, 1);
      |                      ^
      |                      ;
/home/crazyproger/sandbox/oneapi-2025/3821B1FI3/2_integral_oneapi/kulikov_artem/integral_oneapi.cpp:10:9: error: use of undeclared identifier 'buffer'
   10 |         buffer<float> sum_buf(&local_res, 1);
      |         ^
/home/crazyproger/sandbox/oneapi-2025/3821B1FI3/2_integral_oneapi/kulikov_artem/integral_oneapi.cpp:10:23: error: use of undeclared identifier 'sum_buf'
   10 |         buffer<float> sum_buf(&local_res, 1);
      |                       ^
/home/crazyproger/sandbox/oneapi-2025/3821B1FI3/2_integral_oneapi/kulikov_artem/integral_oneapi.cpp:13:47: error: use of undeclared identifier 'sum_buf'
   13 |              auto reduction = sycl::reduction(sum_buf, cgh, sycl::plus<>());
      |                                               ^
4 errors generated.
